fix overflow carddeck

--- a/src/composants/Home.css
+++ b/src/composants/Home.css
@@ -3,6 +3,7 @@
         display: flex;
         margin-top: 100px;
         justify-content: space-around;
+        width: 100%;
     }
 }
 @media only screen and (max-width: 1200px) {
@@ -11,6 +12,7 @@
         margin-top: 100px;
         flex-direction: column;
         align-items: center;
+        width: 100%;
     }
 
     #card1 {
